Autocomplete Comment Fix Bug

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -9,7 +9,7 @@
         <h1>Welcome to world airport Dashboard</h1>
         <p>Please choose an action to be performed: Query or Reports</p>
         <p class="pager">
-            <a class="btn btn-primary btn-lg" href="@routes.HomeController.query" role="button">Query</a>
+            <a class="btn btn-primary btn-lg" href="@routes.HomeController.query(None)" role="button">Query</a>
             <a class="btn btn-primary btn-lg" href="@routes.HomeController.reports" role="button">Reports</a>
         </p>
     </div>
