--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -12,12 +12,17 @@
 
     <title>@title</title>
     <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("css/bootstrap.min.css")">
+    <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("css/jquery-ui.min.css")">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <script src="@routes.Assets.versioned("js/jquery-3.2.1.min.js")"></script>
+    <script src="@routes.Assets.versioned("js/jquery-ui.min.js")"></script>
+    <script src="@routes.Assets.versioned("js/bootstrap.min.js")"></script>
 </head>
 @menuQuery = @{Some("query")}
 @menuReports = @{Some("reports")}
@@ -26,20 +31,25 @@
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
                     <a class="navbar-brand" href="@routes.HomeController.index">World Airport Dashboard</a>
                 </div>
-                <div class="navbar-right">
-                <p class="navbar-text " @if(menu == menuQuery) {class="active"}><a class="navbar-link" href="@routes.HomeController.query">Query</a></p>
-                <p class="navbar-text" @if(menu == menuReports) {class="active"}><a class="navbar-link" href="@routes.HomeController.reports">Reports</a></p>
+                <div id="navbar" class="navbar-right collapse navbar-collapse">
+                    <p class="navbar-text " @if(menu == menuQuery) {class="active"}><a class="navbar-link" href="@routes.HomeController.query(None)">Query</a></p>
+                    <p class="navbar-text" @if(menu == menuReports) {class="active"}><a class="navbar-link" href="@routes.HomeController.reports">Reports</a></p>
                 </div>
             </div>
         </nav>
     </div>
-
     <br>
 
     @content
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript" src="@routes.Assets.versioned("js/bootstrap.min.js")"></script>
+
+
 </body>
 </html>
